Remove remaining references to Boost.Mock

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Automatic redirection failed, please go to
 <a href="doc/html/index.html">doc/html/index.html</a>
 <hr>
 <tt>
-Boost.Mock<br>
+Turtle<br>
 <br>
 Copyright Mathieu Champlon 2012<br>
 <br>
